# mancala

./: README.md  pyproject.toml
src/mancala/: __init__.py  cli.py  ctransform.py  utils.py  visualize.py
